k8s/overlays/with-redirect/middleware.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: nginx-namespace
spec:
  redirectScheme:
    scheme: https
    permanent: true
