k8s/overlays/with-redirect/ingress-patch.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  namespace: nginx-namespace
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: nginx-namespace-redirect-https@kubernetescrd
