k8s/overlays/with-redirect/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  namespace: nginx-namespace
  annotations:
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.middlewares: nginx-namespace-redirect-https@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: app.negociapp.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
  tls:
    - hosts:
        - app.negociapp.com
      secretName: nginx-tls
